Modificação do códico fonte

--- a/index.html
+++ b/index.html
@@ -16,35 +16,35 @@
         <div class="row">
             <label for="Cep">CEP:</label>
             <div>
-                <input class="box" type="text" id="cep" required>
+                <input class="box" type="text" id="code" required>
             </div>   
         </div>
 
         <div class="row">
             <label for="endereco">ENDEREÇO:</label>
             <div>
-                <input class="box" type="text"  id="endereco" required>
+                <input class="box" type="text"  id="address" required>
             </div>
         </div>
         
         <div class="row">
             <label for="bairro">BAIRRO:</label>
             <div >
-                <input class="box" type="text" id="bairro" required>
+                <input class="box" type="text" id="district" required>
             </div>  
         </div>
 
         <div class="row">
             <label for="cidade">CIDADE:</label>
             <div class="input">
-                <input class="box" type="text" id="cidade" required>   
+                <input class="box" type="text" id="city" required>   
             </div>
         </div>
 
         <div class="row">
             <label for="estado">ESTADO:</label>
             <div>
-                <input class="box"type="text" id="estado" required>
+                <input class="box"type="text" id="state" required>
             </div>
         </div>
 
