--- a/index.html
+++ b/index.html
@@ -14,35 +14,35 @@
     <section>
 
         <div class="row">
-            <label for="Cep">CEP:</label>
+            <label for="zipcode">CEP:</label>
             <div>
-                <input class="box" type="text" id="code" required>
+                <input class="box" type="text" id="zipcode" required>
             </div>   
         </div>
 
         <div class="row">
-            <label for="endereco">ENDEREÇO:</label>
+            <label for="address">ENDEREÇO:</label>
             <div>
                 <input class="box" type="text"  id="address" required>
             </div>
         </div>
         
         <div class="row">
-            <label for="bairro">BAIRRO:</label>
+            <label for="district">BAIRRO:</label>
             <div >
                 <input class="box" type="text" id="district" required>
             </div>  
         </div>
 
         <div class="row">
-            <label for="cidade">CIDADE:</label>
+            <label for="city">CIDADE:</label>
             <div class="input">
                 <input class="box" type="text" id="city" required>   
             </div>
         </div>
 
         <div class="row">
-            <label for="estado">ESTADO:</label>
+            <label for="state">ESTADO:</label>
             <div>
                 <input class="box"type="text" id="state" required>
             </div>
